Fixed bugs
Fixed issue on about.html where work&education in nav bar routed to a download.

Resized landscape video in powerlifting.html. The right border was cropped out.

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
 .bodyFont{
   font-family: 'Frank Ruhl Libre', serif;
 }
+
 /* general style for body of webpage */
 .body {
   font-family: 'Frank Ruhl Libre', serif;
@@ -30,9 +31,6 @@
   height: 50%;
 }
 
-/* .titlePadding {
-  padding-left: 25px;
-} */
 .centerHeader {
   font-family: 'Frank Ruhl Libre', serif;
   padding-top: 35px;
@@ -45,8 +43,6 @@
 
 .carouselIndex {
   font-family: 'Frank Ruhl Libre', serif;
-  /* padding-top: 10px;
-  padding-bottom: 5px; */
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -116,7 +112,6 @@ h3 {
   width: 300px;
   float: left;
   margin-right: 20px;
-  /* padding-right: 40px; */
 }
 
 .bio {
@@ -129,7 +124,6 @@ h3 {
   /* background-color: green; */
   display: inline-block;
   margin-top: 25px;
-  /* position: absolute; */
   bottom: 0;
   width: 100%;
   height: 2.5rem;
